# slowtorch

./: .gitignore  README.rst  pyproject.toml  requirements-dev.txt  rex.py
.github/: CODEOWNERS
reports/: reports.html
slowtorch/: __init__.py  _random.py  _tensor.py  _types.py  _utils.py  _variable_functions.py  types.py  utils.py
slowtorch/internal/: device.py  dtype.py  random.py  shape.py  tensor.py
slowtorch/nn/: __init__.py  functional.py  modules.py
slowtorch/nn/functional/: __init__.py  layer.py  loss.py  mutation.py  pointwise.py  reduction.py
slowtorch/nn/modules/: __init__.py  activation.py  layer.py  loss.py  module.py  parameter.py
slowtorch/ops/: creation.py  mutation.py  random.py
slowtorch/optim/: __init__.py  optimiser.py
tests/: __init__.py  conftest.py  test_functional.py  test_tensor.py
